flux/infrastructure/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-secrets-manager
  namespace: bitwarden
spec:
  selector:
    app: bitwarden-secrets-manager
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
