flux/infrastructure/bitwarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-secrets-manager
  namespace: bitwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bw.becklab.cloud`)
      kind: Rule
      services:
        - name: bitwarden-secrets-manager
          port: 80
          scheme: http
      middlewares:
        - name: sso-admin-chain
          namespace: identity
  tls:
    secretName: bw-tls
